# memwal-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/memwal-core/: Cargo.toml
crates/memwal-core/src/: lib.rs  transport.rs  utils.rs
crates/memwal-core/src/account/: client.rs  mod.rs
crates/memwal-core/src/auth/: delegate_key.rs  seal_session.rs
crates/memwal-core/src/client/: memwal.rs  mod.rs  provisioning.rs
crates/memwal-core/src/manual/: client.rs  mod.rs  seal.rs  walrus.rs
crates/memwal-core/src/manual/embedding/: mod.rs  ollama.rs  openai.rs
crates/memwal-core/src/sui/: signer.rs  tx.rs
crates/memwal-core/src/types/: manual.rs  mod.rs  registry.rs  relayer.rs
crates/memwal-demo/: Cargo.toml
crates/memwal-demo/src/: main.rs
external-crates/seal-sdk-rs/: Cargo.toml  README.md
external-crates/seal-sdk-rs/src/: cache.rs  error.rs  generic_types.rs  session_key.rs
external-crates/seal-sdk-rs/src/native_sui_sdk/client/: seal_client.rs
external-crates/seal-sdk-rs/src/reqwest/: client.rs
