[package]
name = "seal-sdk-rs"
version.workspace = true
edition.workspace = true
authors = ["Quentin Diebold <pro@quentindiebold.com>"]
license.workspace = true
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
fastcrypto = { workspace = true }
serde = { workspace = true }
sui-sdk-types = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
seal_crypto = { workspace = true }
thiserror = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = { workspace = true }

reqwest = { workspace = true, optional = true }
http = { workspace = true, optional = true }
moka = { workspace = true, optional = true }

sui-crypto = { workspace = true, optional = true }
sui-rpc = { workspace = true, optional = true }
sui-transaction-builder = { workspace = true, optional = true }

sui_types = { workspace = true, optional = true }
sui_keys = { workspace = true, optional = true }
sui_sdk = { workspace = true, optional = true }
shared_crypto = { workspace = true, optional = true }

[dev-dependencies]
testcontainers = { workspace = true }
sui_json_rpc_types = { workspace = true }

[features]
default = ["client", "native-tls", "native-sui-sdk"]

native-tls = ["reqwest/native-tls"]

client = [
    "dep:reqwest",
    "dep:http"
]

moka-client = [
    "dep:moka"
]

native-sui-sdk = [
    "dep:sui_sdk",
    "dep:sui_types",
    "dep:sui_keys",
    "dep:shared_crypto"
]

sui-rust-sdk = [
    "dep:sui-crypto",
    "dep:sui-rpc",
    "dep:sui-transaction-builder"
]
